# devmate-coding-agent

./: .gitignore  Dockerfile  README.md  config.toml  docker-compose.yml  main.py  pyproject.toml
docs/: FastAPI 后端开发规范.md  fastapi_backend_guidelines.md  project_architecture.md  项目架构.md
src/devmate/agent/: coding_agent.py  executor.py  planner.py  prompts.py  router.py  runtime.py  state.py  tools.py
src/devmate/config/: __init__.py  settings.py
src/devmate/mcp/: schemas.py  server.py  tools.py
src/devmate/rag/: chunker.py  ingest.py  loader.py  retriever.py  schemas.py  store.py
src/devmate/skills/: builder.py  retriever.py  schema.py  store.py
src/devmate/utils/: workspace.py
src/skills/: ai.json  build_react_dashboard.json  fastapi.json
